--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h2>An open-source classic snake game written in Python.</h2>
 
         <section id="downloads">
-          <a href="https://github.com/EricsonWillians/PyclassicS/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/EricsonWillians/PyclassicS/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/EricsonWillians/PyclassicS/zipball/1.1" class="btn">Download as .zip</a>
+          <a href="https://github.com/EricsonWillians/PyclassicS/tarball/1.1" class="btn">Download as .tar.gz</a>
           <a href="https://github.com/EricsonWillians/PyclassicS" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
